gitops/apps/pro-login-animacion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pro-login-animacion
  namespace: pro-login-animacion
  labels:
    app: pro-login-animacion
spec:
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: pro-login-animacion
  template:
    metadata:
      labels:
        app: pro-login-animacion
    spec:
      containers:
        - name: pro-login-animacion
          image: ghcr.io/ismola/pro-login-animacion:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
              ephemeral-storage: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
              ephemeral-storage: 256Mi
