gitops/apps/pro-login-animacion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pro-login-animacion
  namespace: pro-login-animacion
spec:
  type: ClusterIP
  selector:
    app: pro-login-animacion
  ports:
    - name: http
      port: 80
      targetPort: 80
